# TestU01-2009

./: .gitignore  CMakeLists.txt  README.md
config/: CMakeLists.txt  config.h.in  gdefconf.h.in
mylib/: CMakeLists.txt  chrono.c
probdist/: CMakeLists.txt  fbar.c
tcode/: CMakeLists.txt
testu01/: CMakeLists.txt  sspacings.c  svaria.c
